--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "clsx": "^2.1.0",
     "lucide": "^0.311.0",
     "lucide-react": "^0.311.0",
-    "next": "14.0.4",
+    "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
+    "swr": "^2.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
