--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-jvectormap/africa": "^1.0.1",
+    "@react-jvectormap/core": "^1.0.4",
     "@reduxjs/toolkit": "^2.0.1",
     "animejs": "^3.2.2",
     "axios": "^1.6.5",
